Working on about

--- a/app/routes/privacy.mdx
+++ b/app/routes/privacy.mdx
@@ -1,7 +1,12 @@
-<div className="mx-auto max-w-4xl prose dark:prose-invert pt-8">
+<div className="mx-auto max-w-4xl prose dark:prose-invert prose-h1:text-5xl prose-h1:font-normal pt-8">
 
 # Privacy policy
 
+## Kontaktdaten
+
+## Umfang der Verarbeitung personenbezogener Daten
+
+## Rechtsgrundlage für die Verarbeitung personenbezogener Daten
 
 
 </div>
