Privacy policy in english

--- a/app/routes/privacy.mdx
+++ b/app/routes/privacy.mdx
@@ -1,181 +1,177 @@
 <div className="mx-auto max-w-4xl prose dark:prose-invert prose-sm prose-headings:font-normal pt-8">
 
-# Datenschutzerklärung
+# Privacy Policy
 
-## Verantwortlichkeit
+## Responsibility
 
-Der Verantwortliche im Sinne der Datenschutz-Grundverordnung und anderer nationaler Datenschutzgesetze der Mitgliedsstaaten sowie sonstiger datenschutzrechtlicher Bestimmungen ist:
+The responsible entity within the meaning of the General Data Protection Regulation and other national data protection laws of the member states, as well as other data protection regulations, is:
 
-{
+{<p>
+moku pona
 
-<p>
-  moku pona
   <br />
   Regensbergstrasse 24
   <br />
   8050 Zürich
   <br />
-  Schweiz
+  Switzerland
   <br />
-  E-Mail: mokupona@gmail.com
+  Email: mokupona@gmail.com
   <br />
   Website: https://mokupona.ch
-</p>
-}
+</p>}
 
-## Allgemeines zur Datenbearbeitung
+## General Information on Data Processing
 
-### Umfang der Verarbeitung personenbezogener Daten
+### Scope of Processing of Personal Data
 
-Wir verarbeiten personenbezogene Daten unserer Nutzer grundsätzlich nur, soweit dies zur Bereitstellung einer funktionsfähigen Website sowie unserer Inhalte und Leistungen erforderlich ist. Die Verarbeitung personenbezogener Daten unserer Nutzer erfolgt regelmäßig nur nach Einwilligung des Nutzers. Eine Ausnahme gilt in solchen Fällen, in denen eine vorherige Einholung einer Einwilligung aus tatsächlichen Gründen nicht möglich ist und die Verarbeitung der Daten durch gesetzliche Vorschriften gestattet ist.
+We process personal data of our users only to the extent necessary to provide a functional website as well as our content and services. The processing of personal data of our users regularly occurs only with the user's consent. Exceptions apply in cases where obtaining prior consent is not possible for practical reasons and the processing of the data is permitted by legal provisions.
 
-### Rechtsgrundlage für die Verarbeitung personenbezogener Daten
+### Legal Basis for the Processing of Personal Data
 
-Soweit wir für Verarbeitungsvorgänge personenbezogener Daten eine Einwilligung der betroffenen Person einholen, dient Art. 6 Abs. 1 lit. a EU-Datenschutzgrundverordnung (DSGVO) als Rechtsgrundlage.
-Bei der Verarbeitung von personenbezogenen Daten, die zur Erfüllung eines Vertrages, dessen Vertragspartei die betroffene Person ist, erforderlich ist, dient Art. 6 Abs. 1 lit. b DSGVO als Rechtsgrundlage. Dies gilt auch für Verarbeitungsvorgänge, die zur Durchführung vorvertraglicher Maßnahmen erforderlich sind.
-Soweit eine Verarbeitung personenbezogener Daten zur Erfüllung einer rechtlichen Verpflichtung erforderlich ist, der unser Unternehmen unterliegt, dient Art. 6 Abs. 1 lit. c DSGVO als Rechtsgrundlage.
-Für den Fall, dass lebenswichtige Interessen der betroffenen Person oder einer anderen natürlichen Person eine Verarbeitung personenbezogener Daten erforderlich machen, dient Art. 6 Abs. 1 lit. d DSGVO als Rechtsgrundlage.
-Ist die Verarbeitung zur Wahrung eines berechtigten Interesses unseres Vereins oder eines Dritten erforderlich und überwiegen die Interessen, Grundrechte und Grundfreiheiten des Betroffenen das erstgenannte Interesse nicht, so dient Art. 6 Abs. 1 lit. f DSGVO als Rechtsgrundlage für die Verarbeitung.
+When obtaining the consent of the data subject for processing operations involving personal data, Article 6(1)(a) of the EU General Data Protection Regulation (GDPR) serves as the legal basis.  
+If the processing of personal data is necessary for the performance of a contract to which the data subject is a party, Article 6(1)(b) GDPR serves as the legal basis. This also applies to processing required for pre-contractual measures.  
+If the processing of personal data is necessary for compliance with a legal obligation to which our organization is subject, Article 6(1)(c) GDPR serves as the legal basis.  
+If the processing is necessary to protect vital interests of the data subject or another natural person, Article 6(1)(d) GDPR serves as the legal basis.  
+If the processing is necessary for the purposes of legitimate interests pursued by our organization or a third party and these interests are not overridden by the interests, rights, or freedoms of the data subject, Article 6(1)(f) GDPR serves as the legal basis.
 
-### Datenlöschung und Speicherung
+### Data Deletion and Retention
 
-Die personenbezogenen Daten der betroffenen Person werden gelöscht oder gesperrt, sobald der Zweck der Speicherung entfällt. Eine Speicherung kann darüber hinaus erfolgen, wenn dies durch den europäischen oder nationalen Gesetzgeber in unionsrechtlichen Verordnungen, Gesetzen oder sonstigen Vorschriften, denen der Verantwortliche unterliegt, vorgesehen wurde. Eine Sperrung oder Löschung der Daten erfolgt auch dann, wenn eine durch die genannten Normen vorgeschriebene Speicherfrist abläuft, es sei denn, dass eine Erforderlichkeit zur weiteren Speicherung der Daten für einen Vertragsabschluss oder eine Vertragserfüllung besteht.
+Personal data of the data subject will be deleted or blocked as soon as the purpose of storage ceases. Storage may occur beyond this if provided for by European or national legislation in EU regulations, laws, or other provisions to which the controller is subject. Data will also be blocked or deleted when a retention period prescribed by the aforementioned norms expires unless further storage is necessary for the conclusion or performance of a contract.
 
-## Bereitstellung der Website und Erstellung von Logfiles
+## Provisioning of the Website and Creation of Log Files
 
-### Beschreibung und Umfang der Datenverarbeitung
+### Description and Scope of Data Processing
 
-Bei jedem Aufruf unserer Internetseite erfasst unser System automatisiert Daten und Informationen vom Computersystem des aufrufenden Rechners.
+Every time our website is accessed, our system automatically collects data and information from the computer system of the accessing device.
 
-Folgende Daten werden hierbei erhoben:
+The following data are collected:
 
-1. Informationen über den Browsertyp und die verwendete Version
-2. Das Betriebssystem des Nutzers
-3. Die IP-Adresse des Nutzers
-4. Datum und Uhrzeit des Zugriffs
-5. Websites, von denen das System des Nutzers auf unsere Internetseite gelangt
-6. Websites, die vom System des Nutzers über unsere Website aufgerufen werden
+1. Information about the browser type and version used
+2. The user’s operating system
+3. The user’s IP address
+4. Date and time of access
+5. Websites from which the user’s system accessed our website
+6. Websites accessed by the user’s system via our website
 
-Die Daten werden ebenfalls in den Logfiles unseres Systems gespeichert. Eine Speicherung dieser Daten zusammen mit anderen personenbezogenen Daten des Nutzers findet nicht statt.
+The data are also stored in our system's log files. This data is not stored together with other personal data of the user.
 
-### Rechtsgrundlage für die Datenverarbeitung
+### Legal Basis for Data Processing
 
-Rechtsgrundlage für die vorübergehende Speicherung der Daten und der Logfiles ist Art. 6 Abs. 1 lit. f DSGVO.
+The legal basis for the temporary storage of data and log files is Article 6(1)(f) GDPR.
 
-### Zweck der Datenverarbeitung
+### Purpose of Data Processing
 
-Die vorübergehende Speicherung der IP-Adresse durch das System ist notwendig, um eine Auslieferung der Website an den Rechner des Nutzers zu ermöglichen. Hierfür muss die IP-Adresse des Nutzers für die Dauer der Sitzung gespeichert bleiben.
-Die Speicherung in Logfiles erfolgt, um die Funktionsfähigkeit der Website sicherzustellen. Zudem dienen uns die Daten zur technischen Optimierung der Website und zur Sicherstellung der Sicherheit unserer informationstechnischen Systeme. Eine Auswertung der Daten zu Marketingzwecken findet in diesem Zusammenhang nicht statt.
-In diesen Zwecken liegt auch unser berechtigtes Interesse an der Datenverarbeitung nach Art. 6 Abs. 1 lit. f DSGVO.
+The temporary storage of the IP address by the system is necessary to deliver the website to the user’s computer. For this, the user’s IP address must remain stored for the duration of the session.  
+Storage in log files is carried out to ensure the functionality of the website. Additionally, the data help us optimize the website and ensure the security of our information technology systems. No data analysis for marketing purposes takes place in this context.  
+Our legitimate interest in data processing under Article 6(1)(f) GDPR also lies in these purposes.
 
-### Dauer der Speicherung
+### Duration of Storage
 
-Die Daten werden gelöscht, sobald sie für die Erreichung des Zweckes ihrer Erhebung nicht mehr erforderlich sind. Im Falle der Erfassung der Daten zur Bereitstellung der Website ist dies der Fall, wenn die jeweilige Sitzung beendet ist.
-Im Falle der Speicherung der Daten in Logfiles ist dies nach spätestens sieben Tagen der Fall. Eine darüberhinausgehende Speicherung ist möglich. In diesem Fall werden die IP-Adressen der Nutzer gelöscht oder verfremdet, sodass eine Zuordnung des aufrufenden Clients nicht mehr möglich ist.
+The data will be deleted as soon as it is no longer necessary to achieve the purpose of its collection. In the case of data collection for providing the website, this occurs when the session ends. For log file storage, this occurs after a maximum of seven days. Extended storage is possible. In such cases, the IP addresses of users are deleted or anonymized, making it impossible to associate them with the accessing client.
 
-### Widerspruchs- und Beseitigungsmöglichkeit
+### Objection and Removal Options
 
-Die Erfassung der Daten zur Bereitstellung der Website und die Speicherung der Daten in Logfiles ist für den Betrieb der Internetseite zwingend erforderlich. Es besteht folglich seitens des Nutzers keine Widerspruchsmöglichkeit.
+Data collection for the provision of the website and storage of data in log files are essential for the operation of the website. Therefore, users cannot object to this.
 
-## Verwendung von Cookies
+## Use of Cookies
 
-### Beschreibung und Umfang der Datenverarbeitung
+### Description and Scope of Data Processing
 
-Unsere Webseite verwendet Cookies. Bei Cookies handelt es sich um Textdateien, die im Internetbrowser bzw. vom Internetbrowser auf dem Computersystem des Nutzers gespeichert werden. Ruft ein Nutzer eine Website auf, so kann ein Cookie auf dem Betriebssystem des Nutzers gespeichert werden. Dieser Cookie enthält eine charakteristische Zeichenfolge, die eine eindeutige Identifizierung des Browsers beim erneuten Aufrufen der Website ermöglicht.
-Wir setzen Cookies ein, um unsere Website funktionsfähig zu gestalten. Einige Elemente unserer Internetseite erfordern es, dass der aufrufende Browser auch nach einem Seitenwechsel identifiziert werden kann.
+Our website uses cookies. Cookies are text files stored in the internet browser or by the internet browser on the user’s computer system. When a user accesses a website, a cookie may be stored on the user’s operating system. This cookie contains a distinctive string of characters that allows for the unique identification of the browser upon re-accessing the website.  
+We use cookies to make our website functional. Some elements of our website require that the browser be recognized even after a page transition.
 
-In den Cookies werden dabei folgende Daten gespeichert und übermittelt:
+The following data are stored and transmitted in cookies:
 
-1. Log-In-Informationen
+1. Login information
 
-### Rechtsgrundlage für die Datenverarbeitung
+### Legal Basis for Data Processing
 
-Die Rechtsgrundlage für die Verarbeitung personenbezogener Daten unter Verwendung von technisch erforderlichen Cookies i.S.d. § 25 Abs. 2 TTDSG ist Art. 6 Abs. 1 lit. f DSGVO.
+The legal basis for the processing of personal data using technically necessary cookies within the meaning of Section 25(2) TTDSG is Article 6(1)(f) GDPR.
 
-### Zweck der Datenverarbeitung
+### Purpose of Data Processing
 
-Der Zweck der Verwendung technisch notwendiger Cookies ist, die Nutzung von Websites für die Nutzer zu ermöglichen. Einige Funktionen unserer Internetseite können ohne den Einsatz von Cookies nicht angeboten werden. Für diese ist es erforderlich, dass der Browser auch nach einem Seitenwechsel wiedererkannt wird.
+The use of technically necessary cookies is to enable the functionality of our website. Certain functions of our website cannot be provided without cookies. These require the browser to be recognized after a page transition.
 
-Für folgende Anwendungen benötigen wir Cookies:
+We use cookies for the following purposes:
 
-1. Log-In-Informationen
+1. Login information
 
-Die durch technisch notwendige Cookies erhobenen Nutzerdaten werden nicht zur Erstellung von Nutzerprofilen verwendet.
-In diesen Zwecken liegt auch unser berechtigtes Interesse in der nachfolgenden Verarbeitung der personenbezogenen Daten nach Art. 6 Abs. 1 lit. f DSGVO.
+The user data collected through technically necessary cookies are not used to create user profiles.  
+Our legitimate interest in processing personal data under Article 6(1)(f) GDPR lies in these purposes.
 
-### Dauer der Speicherung, Widerspruchs- und Beseitigungsmöglichkeit
+### Duration of Storage, Objection, and Removal Options
 
-Cookies werden auf dem Rechner des Nutzers gespeichert und von diesem an unsere Seite übermittelt. Daher haben Sie als Nutzer auch die volle Kontrolle über die Verwendung von Cookies. Durch eine Änderung der Einstellungen in Ihrem Internetbrowser können Sie die Speicherung von Cookies deaktivieren oder einschränken. Bereits gespeicherte Cookies können jederzeit gelöscht werden. Dies kann auch automatisiert erfolgen. Werden Cookies für unsere Website deaktiviert, können möglicherweise nicht mehr alle Funktionen der Website vollumfänglich genutzt werden.
+Cookies are stored on the user's computer and transmitted to our site. Therefore, as a user, you have full control over the use of cookies. By changing the settings in your internet browser, you can deactivate or restrict the transmission of cookies. Cookies already stored can be deleted at any time. This can also be done automatically. If cookies are deactivated for our website, it may no longer be possible to use all functions of the website fully.
 
-## Registrierung
+## Registration
 
-### Beschreibung und Umfang der Datenverarbeitung
+### Description and Scope of Data Processing
 
-Auf unserer Internetseite bieten wir Nutzern die Möglichkeit, sich unter Angabe personenbezogener Daten zu registrieren. Die Daten werden dabei in eine Eingabemaske eingegeben und an uns übermittelt und gespeichert. Eine Weitergabe der Daten an Dritte findet nicht statt.
+Our website offers users the option to register by providing personal data. The data are entered into an input mask, transmitted to us, and stored. No data is disclosed to third parties.
 
-Folgende Daten werden im Rahmen des Registrierungsprozesses erhoben:
+The following data are collected during the registration process:
 
-1. Email-Adresse des Nutzenden
-2. Datum und Uhrzeit der Registrierung
+1. User’s email address
+2. Date and time of registration
 
-Im Rahmen des Registrierungsprozesses wird eine Einwilligung des Nutzers zur Verarbeitung dieser Daten eingeholt.
+As part of the registration process, the user’s consent to process these data is obtained.
 
-### Rechtsgrundlage für die Datenverarbeitung
+### Legal Basis for Data Processing
 
-Rechtsgrundlage für die Verarbeitung der Daten ist bei Vorliegen einer Einwilligung des Nutzers Art. 6 Abs. 1 lit. a DSGVO.
+The legal basis for processing the data is the user’s consent under Article 6(1)(a) GDPR.
 
-### Zweck der Datenverarbeitung
+### Purpose of Data Processing
 
-Eine Registrierung des Nutzers ist für das Bereithalten bestimmter Inhalte und Leistungen auf unserer Website erforderlich.
+User registration is necessary for providing certain content and services on our website.
 
-### Dauer der Speicherung
+### Duration of Storage
 
-Die Daten werden gelöscht, sobald sie für die Erreichung des Zweckes ihrer Erhebung nicht mehr erforderlich sind.
-Dies ist für die während des Registrierungsvorgangs erhobenen Daten der Fall, wenn die Registrierung auf unserer Internetseite aufgehoben oder abgeändert wird.
+The data will be deleted as soon as they are no longer necessary for achieving the purpose for which they were collected. For data collected during the registration process, this is the case when the user’s registration is canceled or modified on our website.
 
-### Widerspruchs- und Beseitigungsmöglichkeit
+### Objection and Removal Options
 
-Als Nutzer haben sie jederzeit die Möglichkeit, die Registrierung aufzulösen. Die über Sie gespeicherten Daten können Sie jederzeit abändern lassen.
-Kontaktieren Sie uns dafür über die oben angegebenen Kontaktdaten.
+As a user, you may cancel your registration at any time. You may also request that the data stored about you be modified.  
+To do so, contact us using the contact details provided above.
 
-## Kontaktformular und E-Mail-Kontakt
+## Contact Form and Email Contact
 
-### Beschreibung und Umfang der Datenverarbeitung
+### Description and Scope of Data Processing
 
-Auf unserer Internetseite ist ein Kontaktformular vorhanden, welches für die elektronische Kontaktaufnahme genutzt werden kann. Nimmt ein Nutzer diese Möglichkeit wahr, so werden die in der Eingabemaske eingegeben Daten an uns übermittelt und gespeichert.
-Diese Daten sind:
+Our website includes a contact form that can be used for electronic communication. If a user takes advantage of this option, the data entered into the input mask are transmitted to and stored by us.
 
-1. Email-Adresse des Nutzenden
-2. Datum und Uhrzeit der Kontaktaufnahme
+These data include:
 
-Für die Verarbeitung der Daten wird im Rahmen des Absendevorgangs Ihre Einwilligung eingeholt und auf diese Datenschutzerklärung verwiesen.
-Alternativ ist eine Kontaktaufnahme über die bereitgestellte E-Mail-Adresse möglich. In diesem Fall werden die mit der E-Mail übermittelten personenbezogenen Daten des Nutzers gespeichert.
-Es erfolgt in diesem Zusammenhang keine Weitergabe der Daten an Dritte. Die Daten werden ausschließlich für die Verarbeitung der Konversation verwendet.
+1. User’s email address
+2. Date and time of contact
 
-### Rechtsgrundlage für die Datenverarbeitung
+When submitting the form, your consent to process the data is obtained, and this privacy policy is referenced.  
+Alternatively, contact can be made via the provided email address. In this case, the user’s personal data transmitted with the email will be stored. No data will be disclosed to third parties. Data will be used exclusively for processing the conversation.
 
-Rechtsgrundlage für die Verarbeitung der Daten ist bei Vorliegen einer Einwilligung des Nutzers Art. 6 Abs. 1 lit. a DSGVO.
-Rechtsgrundlage für die Verarbeitung der Daten, die im Zuge einer Übersendung einer E-Mail übermittelt werden, ist Art. 6 Abs. 1 lit. f DSGVO. Zielt der E-Mail-Kontakt auf den Abschluss eines Vertrages ab, so ist zusätzliche Rechtsgrundlage für die Verarbeitung Art. 6 Abs. 1 lit. b DSGVO.
+### Legal Basis for Data Processing
 
-### Zweck der Datenverarbeitung
+The legal basis for processing data with user consent is Article 6(1)(a) GDPR.  
+If the email contact aims to conclude a contract, the additional legal basis for processing is Article 6(1)(b) GDPR.
 
-Die Verarbeitung der personenbezogenen Daten aus der Eingabemaske dient uns allein zur Bearbeitung der Kontaktaufnahme. Im Falle einer Kontaktaufnahme per E-Mail liegt hieran auch das erforderliche berechtigte Interesse an der Verarbeitung der Daten.
-Die sonstigen während des Absendevorgangs verarbeiteten personenbezogenen Daten dienen dazu, einen Missbrauch des Kontaktformulars zu verhindern und die Sicherheit unserer informationstechnischen Systeme sicherzustellen.
+### Purpose of Data Processing
 
-### Dauer der Speicherung
+Processing personal data from the input mask is solely for handling the contact request. In the case of email contact, this also constitutes our necessary legitimate interest in processing the data.  
+Additional personal data collected during the submission process prevents misuse of the contact form and ensures the security of our information technology systems.
 
-Die Daten werden gelöscht, sobald sie für die Erreichung des Zweckes ihrer Erhebung nicht mehr erforderlich sind. Für die personenbezogenen Daten aus der Eingabemaske des Kontaktformulars und diejenigen, die per E-Mail übersandt wurden, ist dies dann der Fall, wenn die jeweilige Konversation mit dem Nutzer beendet ist. Beendet ist die Konversation dann, wenn sich aus den Umständen entnehmen lässt, dass der betroffene Sachverhalt abschließend geklärt ist.
-Die während des Absendevorgangs zusätzlich erhobenen personenbezogenen Daten werden spätestens nach einer Frist von sieben Tagen gelöscht.
+### Duration of Storage
 
-### Widerspruchs- und Beseitigungsmöglichkeit
+The data will be deleted as soon as they are no longer necessary for the purpose for which they were collected. For data from the contact form and those sent via email, this occurs when the conversation with the user has ended. A conversation is considered ended when the circumstances indicate that the relevant matter has been conclusively resolved.  
+Additional personal data collected during the submission process will be deleted no later than seven days after collection.
 
-Der Nutzer hat jederzeit die Möglichkeit, seine Einwilligung zur Verarbeitung der personenbezogenen Daten zu widerrufen. Nimmt der Nutzer per E-Mail Kontakt mit uns auf, so kann er der Speicherung seiner personenbezogenen Daten jederzeit widersprechen. In einem solchen Fall kann die Konversation nicht fortgeführt werden.
-Alle personenbezogenen Daten, die im Zuge der Kontaktaufnahme gespeichert wurden, werden in diesem Fall gelöscht.
+### Objection and Removal Options
 
-## Änderung unserer Datenschutzbestimmungen
+The user can revoke their consent to process personal data at any time. If the user contacts us via email, they can object to the storage of their personal data at any time. In such cases, the conversation cannot continue.  
+All personal data stored during contact will be deleted in this case.
 
-Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.
+## Changes to Our Privacy Policy
 
-Zuletzt geändert am: 03.01.2024
+We reserve the right to update this privacy policy to reflect changes in legal requirements or changes to our services, such as when introducing new services. For your next visit, the new privacy policy will apply.
+
+Last updated: January 3, 2024
 
 </div>
