Linking privacy policy and requiring it according to policy

--- a/app/routes/privacy.mdx
+++ b/app/routes/privacy.mdx
@@ -134,6 +134,51 @@ The data will be deleted as soon as they are no longer necessary for achieving t
 As a user, you may cancel your registration at any time. You may also request that the data stored about you be modified.  
 To do so, contact us using the contact details provided above.
 
+## Signing up for an event
+
+### Description and Scope of Data Processing
+
+Our website offers users the option to sign up for our events by providing personal data. The data are entered into an input mask, transmitted to us, and stored. No data is disclosed to third parties.
+
+The following data are collected during the sign up process:
+
+1. User’s name
+2. User’s email address
+3. User’s phone number
+4. User’s dietary preferences and restrictions
+5. If the user is a student or not
+6. A notification text provided by the user intended for additional information
+7. Date and time of sign up
+
+As part of the sign up process, the user’s consent to process these data is obtained.
+
+### Legal Basis for Data Processing
+
+The legal basis for processing the data is the user’s consent under Article 6(1)(a) GDPR and Article 6(1)(b) GDPR.
+
+### Purpose of Data Processing
+
+User sign up is necessary to fulfill a contract with the user or to carry out pre-contractual measures.
+
+This may include one or all of the following:
+
+1. Contacting the user through the provided contact information regarding the event
+2. Checking if the event menu contains any critical food according to the provided restrictions
+3. Calculating the cost according to menu preferences and active enrollments at a university
+4. Processing additional information provided by the user
+
+### Duration of Storage
+
+The data will be deleted as soon as they are no longer necessary for achieving the purpose for which they were collected.
+This is the case for the data collected during the sign up process to fulfill a contract or to carry out pre-contractual measures, when the data is no longer required for the execution of the contract. Even after the contract has been completed, there may still be a need to store the personal data of the contracting party to comply with contractual or legal obligations.
+In accordance with legal regulations, data retention is carried out in particular for 10 years pursuant to Article 958 of the Swiss Code of Obligations (OR) and Article 70 of the Value Added Tax Act (MwStG).
+
+### Objection and Removal Options
+
+As a user, you may cancel your sign up at any time. You may also request that the data stored about you be modified.  
+To do so, contact us using the contact details provided above.
+If the data is required to fulfill a contract or to carry out pre-contractual measures, early deletion of the data is only possible insofar as contractual or legal obligations do not prevent deletion.
+
 ## Contact Form and Email Contact
 
 ### Description and Scope of Data Processing
